--- a/index.html
+++ b/index.html
@@ -36,19 +36,9 @@
         />
         <button>+</button>
       </form>
-      <div id="todos" class="todos">
-        <div class="todo">
-          <button id="check" class="left-btn">
-            <i class="fas fa-check"></i>
-          </button>
-          <div class="todo-text">Pee in the toilet 🚽 ...</div>
-          <button id="remove" class="right-btn">
-            <i class="fas fa-trash"></i>
-          </button>
-        </div>
-      </div>
-      <button class="clear">Clear</button>
+      <div id="todos" class="todos"></div>
+      <button id="clear" class="clear">Clear</button>
     </main>
+    <script src="app.js"></script>
   </body>
-  <script src="app.js"></script>
 </html>
